tests-integration/tests/roundtrip/invalid/syntax/malformed_line/04/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/syntax/malformed_line/04/input.essence:1:1:
  |
1 | letting % A be 3
  | ^^^^^^^
Error: Declaration without any members

tests/roundtrip/invalid/syntax/malformed_line/04/input.essence:1:9:
  |
1 | letting % A be 3
  |         ^^^^^^^^
Skipped tokens

tests/roundtrip/invalid/syntax/malformed_line/04/input.essence:6:7:
  |
6 |   b < A
  |       ^
Error: Symbol not found "A"

